--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Portfolio of David Johnson",
   "main": "index.js",
+  "engines": {
+    "node": "20.4.0",
+    "npm": "^6.0.0" 
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js",
