--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "engines": {
     "node": "20.4.0",
-    "npm": "^6.0.0" 
+    "npm": "6.0.0" 
   },
   "dependencies": {
     "@ant-design/icons": "4.0.0",
