--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,12 @@
 {
   "name": "client",
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:5000",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20.4.0",
+    "npm": "6.0.0" 
+  },
   "dependencies": {
     "@ant-design/icons": "4.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
